Fixed most Maintainability Issues for SonarQube